--- a/employeemanagerapp/tsconfig.json
+++ b/employeemanagerapp/tsconfig.json
@@ -14,6 +14,8 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "strictNullChecks": false,
+
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2020",
